# ProjectChampollion

./: .gitignore  CITATION.cff  LICENSE  README.md
AotSharedCacheExtractor/: README.md  aot_mapped_module_names  main.py  pyproject.toml
docs/: 404.html  index.html  sitemap.xml
docs/appendix/: index.html
docs/assets/: check_calling_convention.out.aot  event_raw.jsonl  figures.pptx
docs/part1/: index.html
docs/part2/: index.html
docs_src/: mkdocs.yml  pyproject.toml
docs_src/src/: appendix.md  index.md  part1.md  part2.md
docs_src/src/assets/: check_calling_convention.c  event.jsonl  figures.pptx  hello.out.aot  vmmap.txt  ~$figures.pptx
ghidra/: AARCH64_aot.cspec  README.md
